GRNOC::WebService::Client v1.3.3 -- Wed Oct 5 2016
===================================================

Bug Fixes:
 * ISSUE=2171 PROJ=160 Clear error state between subsequent calls to avoid cases where
error state would persist after a transient problem.


GRNOC::WebService::Client v1.3.2 -- Tue Jun 02 2015
===================================================

Features:
 * ISSUE=11086 Webservice Client instances will now automatically save their cookies if applicable after any successful
request is made instead of relying on code to make an explicit call. This is similar to prior behavior that
was lost when a thread-safe change was made to the saving mechanism.
 * ISSUE=10952 Improved error messages when failing to handle URNs.

Bug Fixes:
 * ISSUE=11282 Webservice Clients will now properly choose a random URL when given multiple equally weighted URLs 
instead of always choosing the first, ensuring a RR behavior for equal weighted URLs.


GRNOC::WebService::Client v1.3.1 -- Fri May 09 2014
===================================================

Bug Fixes:
 * ISSUE=8594 Fixed issue where in multithreaded or multiprocess environments
a shared cookie jar would sometimes fail to function properly causing redundant
logins.
 * ISSUE=8678 Cleaned up misc harmless warnings that Client was generating 
when parsing headers.


GRNOC::WebService::Client v1.3.0 -- Fri May 09 2014
===================================================

Features:

 * ISSUE=8568 adding built-in pagination support


GRNOC::WebService::Client v1.2.2 -- Tue Jan 21 2014
===================================================

Features:
 * ISSUE=7733 Added ability to change the method parameter name in the constructor. Default is still 'method'.
 * ISSUE=7779 Adding ability to change the cookie jar and explicitly save the cookie jar, adding unit tests.

Bug Fixes:
 * ISSUE=7730 Fix bug where null values weren't properly being sent when passed in an array context

