@@ -23,9 +23,7 @@ sub get_counter {
      my $json = JSON->new;
      my $data = $json->decode($json_text);
      
-     my $retries = $data->{'retries'};
-
-     return $retries;
+     return $data;
 
 }
 
@@ -36,7 +34,7 @@ sub clear_counter {
     my $json = JSON->new;
     my $data = {};
     $data->{'retries'} = 0;
-    
+    $data->{'max_retries'} = 0;
     open( my $fh, ">$counter_file");
     print $fh $json->encode($data) . "\n";
     close( $fh );
@@ -47,11 +45,14 @@ sub increment_counter {
 
     my $counter_file = shift;
 
-    my $retries = get_counter( $counter_file );
+    my $count = get_counter( $counter_file );
+    my $retries     = $count->{'retries'};
+    my $max_retries = $count->{'max_retries'};
     my $json = JSON->new;
     my $data = {};
     
     $data->{'retries'} = $retries + 1;
+    $data->{'max_retries'} = $max_retries + 1;
     open( my $fh, ">$counter_file");
     print $fh $json->encode($data) . "\n";
     close( $fh );
